<resources>
    <string name="action_add_ability">Add Ability</string>
    <string name="action_add_condition_immunity">Add Condition</string>
    <string name="action_add_damage_type">Add Damage Type</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_add_language">Add Language</string>
    <string name="action_add_monster">Add monster</string>
    <string name="action_add_sense">Add Sense</string>
    <string name="action_add_skill">Add Skill</string>
    <string name="action_add_trait">Add Trait</string>
    <string name="action_edit">Edit</string>
    <string name="action_import_monster">Import Monster</string>
    <string name="app_name">MonsterCards</string>
    <string name="charisma_abbreviation">CHA</string>
    <string name="constitution_abbreviation">CON</string>
    <string name="default_monster_name">Unnamed Monster</string>
    <string name="dexterity_abbreviation">DEX</string>
    <string name="format_distance_in_feet">%d ft.</string>
    <string name="intelligence_abbreviation">INT</string>
    <string name="label_ability_scores">Ability Scores</string>
    <string name="label_abilities">Abilities</string>
    <string name="label_actions">Actions</string>
    <string name="label_advantage">Advantage</string>
    <string name="label_advantage_advantage">Advantage</string>
    <string name="label_advantage_disadvantage">Disadvantage</string>
    <string name="label_advantage_none">None</string>
    <string name="label_alignment">Alignment</string>
    <string name="label_armor">Armor</string>
    <string name="label_armor_class">Armor Class</string>
    <string name="label_armorClass_icon">AC</string>
    <string name="label_base_speed">Base Speed</string>
    <string name="label_basic_info">Basic Info</string>
    <string name="label_burrow_speed">Burrow Speed</string>
    <string name="label_can_hover">Can Hover</string>
    <string name="label_can_speak_language">Can Speak</string>
    <string name="label_challenge_rating">Challenge Rating</string>
    <string name="label_challenge_rating_with_value">CR %s</string>
    <string name="label_challengeRating_icon">CR</string>
    <string name="label_charisma">Charisma</string>
    <string name="label_climb_speed">Climb Speed</string>
    <string name="label_condition_immunities">Condition Immunities</string>
    <string name="label_constitution">Constitution</string>
    <string name="label_custom_armor">Custom Armor</string>
    <string name="label_custom_challenge_rating_description">Custom CR</string>
    <string name="label_custom_hp">Custom HP</string>
    <string name="label_custom_proficiency_bonus">Custom Proficiency Bonus</string>
    <string name="label_custom_speed">Custom Speed</string>
    <string name="label_damage_immunities">Damage Immunities</string>
    <string name="label_damage_resistances">Damage Resistances</string>
    <string name="label_damage_type">Damage Type</string>
    <string name="label_damage_vulnerabilities">Damage Vulnerabilities</string>
    <string name="label_decrement_field">-</string>
    <string name="label_description">Description</string>
    <string name="label_dexterity">Dexterity</string>
    <string name="label_fly_speed">Fly Speed</string>
    <string name="label_has_custom_hp">Has Custom HP</string>
    <string name="label_has_custom_speed">Has Custom Speed</string>
    <string name="label_has_a_shield">Has a Shield</string>
    <string name="label_hit_dice">Hit Dice</string>
    <string name="label_hit_points">Hit Points</string>
    <string name="label_hitPoints_icon">HP</string>
    <string name="label_increment_field">+</string>
    <string name="label_initiative_icon">INIT</string>
    <string name="label_intelligence">Intelligence</string>
    <string name="label_lair_actions">Lair Actions</string>
    <string name="label_languages">Languages</string>
    <string name="label_legendary_actions">Legendary Actions</string>
    <string name="label_natural_armor_bonus">Natural Armor Bonus</string>
    <string name="label_name">Name</string>
    <string name="label_understands_but">Understands But</string>
    <string name="label_proficiency">Proficiency</string>
    <string name="label_proficiency_expertise">Expertise</string>
    <string name="label_proficiency_none">None</string>
    <string name="label_proficiency_proficient">Proficient</string>
    <string name="label_reactions">Reactions</string>
    <string name="label_regional_effects">Regional Effects</string>
    <string name="label_saving_throws">Saving Throws</string>
    <string name="label_search_query">Query</string>
    <string name="label_senses">Senses</string>
    <string name="label_shield_bonus">Shield Bonus</string>
    <string name="label_size">Size</string>
    <string name="label_skills">Skills</string>
    <string name="label_speed">Speed</string>
    <string name="label_strength">Strength</string>
    <string name="label_subtype">Subtype</string>
    <string name="label_swim_speed">Swim Speed</string>
    <string name="label_telepathy">Telepathy</string>
    <string name="label_type">Type</string>
    <string name="label_wisdom">Wisdom</string>
    <string name="section_divider">section divider</string>
    <string name="snackbar_failed_to_create_monster">Failed to create monster</string>
    <string name="snackbar_monster_created">%1$s created</string>
    <string name="strength_abbreviation">STR</string>
    <string name="title_collections">Collections</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_editAbilities">Ability</string>
    <string name="title_editAbility">Abilities</string>
    <string name="title_editAbilityScores">Ability Scores</string>
    <string name="title_editAction">Action</string>
    <string name="title_editActions">Actions</string>
    <string name="title_editArmor">Armor</string>
    <string name="title_editBasicInfo">Basic Info</string>
    <string name="title_editChallengeRating">Challenge Rating</string>
    <string name="title_editConditionImmunities">Condition Immunities</string>
    <string name="title_editConditionImmunity">Condition Immunity</string>
    <string name="title_editDamageImmunities">Damage Immunities</string>
    <string name="title_editDamageImmunity">Damage Immunity</string>
    <string name="title_editDamageResistance">Damage Resistance</string>
    <string name="title_editDamageResistances">Damage Resistances</string>
    <string name="title_editDamageVulnerabilities">Damage Vulnerabilities</string>
    <string name="title_editDamageVulnerability">Damage Vulnerability</string>
    <string name="title_editLairAction">Lair Action</string>
    <string name="title_editLairActions">Lair Actions</string>
    <string name="title_editLanguage">Language</string>
    <string name="title_editLanguages">Languages</string>
    <string name="title_editLegendaryAction">Legendary Action</string>
    <string name="title_editLegendaryActions">Legendary Actions</string>
    <string name="title_editMonster">Edit Monster</string>
    <string name="title_editMonster_fmt">Edit %1$s</string>
    <string name="title_editReaction">Reaction</string>
    <string name="title_editReactions">Reactions</string>
    <string name="title_editRegionalAction">Regional Action</string>
    <string name="title_editRegionalActions">Regional Actions</string>
    <string name="title_editSpeed">Speed</string>
    <string name="title_editSavingThrows">Saving Throws</string>
    <string name="title_editSense">Senses</string>
    <string name="title_editSenses">Senses</string>
    <string name="title_editSkill">Skill</string>
    <string name="title_editSkills">Skills</string>
    <string name="title_editString">String</string>
    <string name="title_editStrings">Strings</string>
    <string name="title_editTrait">Trait</string>
    <string name="title_editTraits">Traits</string>
    <string name="title_importMonster">Import Monster</string>
    <string name="title_library">Library</string>
    <string name="title_monsterDetails">Monster Details</string>
    <string name="title_monsterDetails_fmt">%1$s Details</string>
    <string name="title_search">Search</string>
    <string name="wisdom_abbreviation">WIS</string>
</resources>
